--- a/MegaBulkUploader.csproj
+++ b/MegaBulkUploader.csproj
@@ -29,6 +29,22 @@
     <Folder Include="cli\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MegaApiClient">
+      <HintPath>MegaApiClient\MegaApiClient.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="MegaApiClient\MegaApiClient.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(DOCKER_BUILD)' != 'true'">
     <Exec Command="xcopy /E /I /Y /C /Q &quot;$(ProjectDir)cli&quot; &quot;$(TargetDir)cli&quot;" />
   </Target>
